--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -7,34 +7,36 @@ $Acolor: #979fa3;
 $DJcolor: #97bd37;
 
 // bootstrap overrides
-$font-family-sans-serif: 'Lato', Arial, sans-serif;
+$font-family-sans-serif: "Lato", Arial, sans-serif;
 $font-size-base: 16px;
-$font-size-h1: 17px;
+$font-size-h1: 36px;
 $font-size-h2: 26px;
 $font-size-h3: 17px;
-$headings-font-family: 'nexabold';
-$fa-font-path: '../build';
-@import '../../node_modules/font-awesome/scss/font-awesome';
-@import '../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap';
+$headings-font-family: "nexabold";
+$fa-font-path: "../build";
+@import "../../node_modules/font-awesome/scss/font-awesome";
+@import "../../node_modules/swipebox/scss/swipebox.scss";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap";
+@import "../../node_modules/bootstrap-select/dist/css/bootstrap-select";
 
 @font-face {
-  font-family: 'nexalight';
-  src: url('../fonts/nexa-light-webfont.eot');
-  src: url('../fonts/nexa-light-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/nexa-light-webfont.woff') format('woff'),
-    url('../fonts/nexa-light-webfont.ttf') format('truetype'),
-    url('../fonts/nexa-light-webfont.svg#nexaregular') format('svg');
+  font-family: "nexalight";
+  src: url("../fonts/nexa-light-webfont.eot");
+  src: url("../fonts/nexa-light-webfont.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/nexa-light-webfont.woff") format("woff"),
+    url("../fonts/nexa-light-webfont.ttf") format("truetype"),
+    url("../fonts/nexa-light-webfont.svg#nexaregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'nexabold';
-  src: url('../fonts/nexa-bold-webfont.eot');
-  src: url('../fonts/nexa-bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/nexa-bold-webfont.woff') format('woff'),
-    url('../fonts/nexa-bold-webfont.ttf') format('truetype'),
-    url('../fonts/nexa-bold-webfont.svg#nexabold') format('svg');
+  font-family: "nexabold";
+  src: url("../fonts/nexa-bold-webfont.eot");
+  src: url("../fonts/nexa-bold-webfont.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/nexa-bold-webfont.woff") format("woff"),
+    url("../fonts/nexa-bold-webfont.ttf") format("truetype"),
+    url("../fonts/nexa-bold-webfont.svg#nexabold") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -65,12 +67,12 @@ h3 {
 }
 
 h2 {
-  font-family: 'nexalight';
+  font-family: "nexalight";
   margin-bottom: 50px;
 }
 
 h2 strong {
-  font-family: 'nexabold';
+  font-family: "nexabold";
 }
 
 h4 {
@@ -99,7 +101,7 @@ strong {
 }
 
 .light {
-  font-family: 'nexalight';
+  font-family: "nexalight";
 }
 
 .center {
@@ -170,22 +172,19 @@ img {
   &:after {
     display: block;
     position: absolute;
-    background-image: url('../img/honeycomb.svg');
+    background-image: url("../img/honeycomb.svg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 103% 102%;
+    background-size: 100% 100%;
     z-index: 2;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    content: '';
+    content: "";
     width: 100%;
     height: 100%;
-
-    .no-svg & {
-      background-image: url('../img/honeycomb.png');
-    }
+    box-shadow: inset 0 0 0px 1px white;
   }
 }
 
@@ -208,18 +207,18 @@ img {
   }
 }
 
-@import 'hero';
-@import 'footer';
-@import 'news';
-@import 'lineup';
-@import 'angebot';
-@import 'infos';
-@import 'band';
-@import 'fotos';
-@import 'booking';
-@import 'events';
-@import 'panels';
-@import 'brand-assets';
-@import 'typeahead';
-@import 'posters';
-@import 'ics-calendar';
+@import "hero";
+@import "footer";
+@import "news";
+@import "lineup";
+@import "angebot";
+@import "infos";
+@import "band";
+@import "fotos";
+@import "booking";
+@import "events";
+@import "panels";
+@import "brand-assets";
+@import "typeahead";
+@import "posters";
+@import "ics-calendar";
