--- a/assets/scss/_band.scss
+++ b/assets/scss/_band.scss
@@ -23,7 +23,7 @@
     color: inherit;
 
     &:before {
-      content: "";
+      content: '';
       display: block;
       padding-top: 100%;
     }
@@ -68,7 +68,7 @@
   border-top: 5px solid #eee;
   padding: 20px 0 16px;
   margin-bottom: 6px;
-  font-family: "nexabold";
+  font-family: 'nexabold';
   text-transform: uppercase;
   font-size: 28px;
   line-height: 22px;
