--- a/assets/scss/_news.scss
+++ b/assets/scss/_news.scss
@@ -29,12 +29,12 @@
         font-size: 11px;
         border-right: 2px #333 solid;
         margin-right: 10px;
-        font-family: "nexalight";
+        font-family: 'nexalight';
         text-transform: uppercase;
 
         .day {
           color: $brandcolor;
-          font-family: "nexabold";
+          font-family: 'nexabold';
           font-size: 30px;
           margin-top: -4px;
           margin-bottom: -8px;
@@ -47,7 +47,7 @@
         padding-top: 7px;
         margin-left: 70px;
         padding-right: 10px;
-        font-family: "nexabold";
+        font-family: 'nexabold';
         margin-bottom: 0;
         font-size: 26px;
         text-align: left;
