--- a/assets/scss/_posters.scss
+++ b/assets/scss/_posters.scss
@@ -41,7 +41,7 @@
       }
 
       &:before {
-        content: "";
+        content: '';
         padding-top: 141%;
         display: block;
       }
@@ -69,7 +69,7 @@
         transform: translateY(100%);
 
         h2 {
-          font-family: "nexalight";
+          font-family: 'nexalight';
           font-size: 27px;
           margin: 5px;
         }
