--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -70,11 +70,11 @@
     h2 {
       margin: 0;
       text-align: left;
-      font-family: "nexabold";
+      font-family: 'nexabold';
     }
 
     .date {
-      font-family: "nexalight";
+      font-family: 'nexalight';
       text-transform: uppercase;
       font-size: 18px;
       margin-bottom: 6px;
