--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -133,6 +133,8 @@ img {
 }
 
 .subpage {
+  margin-bottom: 80px;
+
   &:last-child {
     border: 0;
     margin-bottom: 0;
@@ -185,6 +187,10 @@ img {
     width: 100%;
     height: 100%;
     box-shadow: inset 0 0 0px 1px white;
+  }
+
+  img {
+    border: 1px solid white;
   }
 }
 
