--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -32,6 +32,7 @@
     font-family: 'nexalight';
     margin-top: 30px;
     height: 35px;
+    text-decoration: line-through; /* COVID-19 */
   }
 
   .nav-logo {
