--- a/assets/scss/_news.scss
+++ b/assets/scss/_news.scss
@@ -128,3 +128,46 @@
     }
   }
 }
+
+.cta-container {
+  max-width: 700px;
+  margin-top: -10px;
+  margin-bottom: 50px;
+
+  .cta {
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
+    padding: 15px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: 767px) {
+      flex-direction: column;
+    }
+
+    h3 {
+      margin: 0;
+      margin-bottom: 3px;
+    }
+  }
+
+  .cta-button {
+    font-weight: bold;
+    color: white;
+    background-color: $brandcolor;
+    padding: 7px 20px 8px;
+    border-radius: 5px;
+    text-decoration: none;
+    white-space: nowrap;
+    text-align: center;
+
+    @media (min-width: 768px) {
+      margin-left: 20px;
+    }
+    @media (max-width: 767px) {
+      margin-top: 15px;
+      width: 100%;
+    }
+  }
+}
