--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,10 +1,10 @@
 $brandcolor: #e12e2e;
 $textcolor: #333;
-$GBcolor: #e12e2e;
-$KBcolor: #446571;
-$WBcolor: #3e444d;
+$GBcolor: #D34F55;
+$KBcolor: #F0BD51;
+$WBcolor: #5DA65C;
 $Acolor: #979fa3;
-$DJcolor: #97bd37;
+$DJcolor: #5487EB;
 
 // bootstrap overrides
 $font-family-sans-serif: 'Lato', Arial, sans-serif;
