--- a/assets/scss/_angebot.scss
+++ b/assets/scss/_angebot.scss
@@ -8,6 +8,18 @@
       margin-top: 30px;
       margin-bottom: 0;
     }
+
+    ul {
+      padding: 0;
+
+      li {
+        text-align: right;
+
+        strong {
+          float: left;
+        }
+      }
+    }
   }
 
   section > p {
