--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,8 +1,8 @@
 $brandcolor: #e12e2e;
 $textcolor: #333;
-$GBcolor: #D34F55;
-$KBcolor: #F0BD51;
-$WBcolor: #5DA65C;
+$GBcolor: #E40E20;
+$KBcolor: #F9AE00;
+$WBcolor: #0097AE;
 $Acolor: #979fa3;
 $DJcolor: #5487EB;
 
